--- a/ML_express_hw2.ipynb
+++ b/ML_express_hw2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML_express_hw2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKeg7cqDGut7ZV8YGGGLOr",
+      "authorship_tag": "ABX9TyNA2s7Q0nopuSTB9eNkOAZU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1144,7 +1144,7 @@
       "source": [
         "Conlusion:\n",
         "\n",
-        "New column `%free_sulfur_dioxide` has a great absolute correlation, because red wines has a high percentage of free sulfur dioxide. This is due to high acidity of red wines, disulphite anions are unstable in very acidic conditions, and therefore, a lot of free $SO_2$ is released outside.\n",
+        "New column `%free_sulfur_dioxide` has a great absolute correlation with `type`, because red wines has a high percentage of free sulfur dioxide. This is due to high acidity of red wines, disulphite anions are unstable in very acidic conditions, and therefore, a lot of free $SO_2$ is released outside.\n",
         "\n",
         "Hence, column `total sulfur dioxide` can be droped as well."
       ],
@@ -1361,7 +1361,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Column `sulphates` has a slightly strong correlation with `type`."
+        "Column `sulphates` also has a slightly strong correlation with `type`."
       ],
       "metadata": {
         "id": "4Jp2jAvVndE5"
